[tool.poetry]
name = "fastrand_fields"
version = "0.1.0"
description = "Package to randomly generate fields such as funny usernames. Suitable for fast microservices."
authors = ["sam <contact@justsam.io>"]
license = "GNUv3"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
